Show scrollbar in widgets container (fix #1703)

--- a/src/utils/gui-settings/gui-settings.scss
+++ b/src/utils/gui-settings/gui-settings.scss
@@ -644,11 +644,6 @@ li.category.folded i.icon-arrow {
     overscroll-behavior: contain;
     overflow: auto;
     height: 100%;
-    scrollbar-width: none !important;
-    &::-webkit-scrollbar {
-      height: 0 !important;
-      width: 0 !important;
-    }
   }
   & > .widgets-container .empty-tip {
     font-size: 10pt;
